add main class test